--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@langchain/google-genai": "^0.2.15",
     "@langchain/langgraph": "^0.3.10",
     "WEB": "link:D:/SAYAN/WEB",
+    "framer-motion": "^12.23.26",
     "langchain": "^0.3.30",
     "langgraph": "link:DEVELOPMENT\\langgraph_github\\libs\\langgraph\\langgraph",
     "lucide-react": "^0.525.0",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/react": "19.2.7",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
     "tailwindcss": "^4"
